added api tests

--- a/test/front/index.html
+++ b/test/front/index.html
@@ -16,9 +16,9 @@
         <!-- load your test files here -->
         <script src="./canary.test.js"></script>
         <!-- <script src="test/classNameTest.js"></script> -->
-
-
-
+        <script>
+        var x = document.getElementById("mocha")
+        console.log(x)</script>
         <script>
       mocha.run();
 </script>
